# plasma-fonts-integration

./: CMakeLists.txt  README.md
autotests/: kfiledialog_unittest.cpp
src/platformtheme/: CMakeLists.txt  kdeplatformfiledialoghelper.cpp  kdeplatformtheme.cpp  kdeplatformtheme.h  khintssettings.cpp
